[package]
name = "cryptus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin ={ version = "0.30.0", features = ["rand-std"]}
serde = "1.0.159"
reqwest = { version = "0.11.16", features = ["stream"] }
rayon = "1.7.0"
tokio = { version = "1.27.0", features = ["full"] }
tar = "0.4"
futures-util = "0.3.14"
flate2 = "1.0.25"
humansize = "1.1.1"
num = "0.4.0"
uuid = "1.3.2"
num_cpus = "1.15.0"
crossbeam = "0.8.2"
memmap = "0.7.0"
k256 ={ version = "0.13.1", default-features = false, features = ["ecdsa"]}
tiny-keccak = "2.0.2"